<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">

    <string name="app_name" translatable="false">Hydra</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_map">Map</string>
    <string name="action_share">Share</string>
    <string name="action_data_summary">Data Summary</string>
    <string name="title_activity_detail">Detail</string>
    <string name="title_activity_settings">Settings</string>

    <string name="heading_choose_location">Choose Location</string>

    <!-- Buttons -->
    <string name="button_use_google_maps">Use Google Maps</string>
    <string name="button_use_current_location">Use Current Location</string>

    <!-- Label for latitude of location preference [CHAR LIMIT = 30] -->
    <string name="pref_location_latitude_label">Latitude</string>

    <!-- Label for longitude of location preference [CHAR LIMIT = 30] -->
    <string name="pref_location_longitude_label">Longitude</string>

    <!-- Key name for storing latitude of location in shared preference [CHAR LIMIT = NONE] -->
    <string name="pref_location_latitude_key">latitude</string>

    <!-- Key name for storing longitude of location in shared preference [CHAR LIMIT = NONE] -->
    <string name="pref_location_longitude_key">longitude</string>

    <!-- Default value for latitude of location preference [CHAR LIMIT = NONE] -->
    <string name="pref_location_latitude_default" translatable="false">31.549721</string>

    <string name="pref_plant_date">plantDate</string>
    <string name="pref_soil_moisture">soilMoisture</string>

    <!-- Default value for longitude of location preference [CHAR LIMIT = NONE] -->
    <string name="pref_location_longitude_default" translatable="false">74.343613</string>
    <string name="title_activity_options">OptionsActivity</string>
    <string name="title_activity_maps">Map</string>

    <!-- Toasts -->
    <string name="toast_error_connection">Connection Error!</string>
    <string name="toast_fetching_data">Fetching Data!</string>
    <string name="toast_error_no_map">Could not open Google Maps</string>
    <string name="toast_long_press_map">Long press to select a location on the map!</string>

    <!-- Map Alert -->
    <string name="alert_map_latitude">Latitude</string>
    <string name="alert_map_longitude">Longitude</string>
    <string name="alert_map_title">Selected Location</string>
    <string name="alert_map_ok_button">OK</string>
    <string name="alert_map_cancel_button">Cancel</string>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date">
        <xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g>
    </string>
    <string name="title_activity_user_input">UserInputActivity</string>

    <!-- For User Input Activity -->
    <string name="user_input_planting_date">Planting Date</string>
    <string name="user_input_choose_planting_date">Choose Planting Date</string>
    <string name="user_input_soil_moisture">Soil Moisture</string>
    <string name="user_input_button_submit">Submit</string>
    <string name="user_inputs">Please enter the details</string>

    <!-- Details Activity -->
    <string name="detail_forecast_textview"></string>
    <string name="detail_high_textview">Maximum Temperature</string>
    <string name="detail_low_textview">Minimum Temperature</string>
    <string name="detail_max_humidity_textview">Maximum Humidity</string>
    <string name="detail_min_humidity_textview">Minimum Humidity</string>
    <string name="detail_max_wind_textview">Maximum Wind</string>
    <string name="detail_morn_wind_textview">Morning Wind</string>
    <string name="detail_precip_textview">Precipitation</string>
    <string name="detail_accPrecip_textview">Accumulative Precipitation</string>
    <string name="detail_accPrecipPriorYear_textview">Accumulative Precipitation Prior Year</string>
    <string name="detail_accPrecip3YearAverage_textview">Accumulative Precipitation 3 Year Average</string>
    <string name="detail_accPrecipLongTermAverage_textview">Accumulative Precipitation Long Term Average</string>
    <string name="detail_solar_textview">Solar</string>
    <string name="detail_gdd_textview">GDD</string>
    <string name="detail_accGdd_textview">Accumulative GDD</string>
    <string name="detail_accGddPriorYear_textview">Accumulative GDD Prior Year</string>
    <string name="detail_accGdd3YearAverage_textview">Accumulative GDD 3 Year Average</string>
    <string name="detail_accGddLongTermAverage_textview">Accumulative GDD Long Term Average</string>
    <string name="detail_pet_textview">Potential Evapotranspiration</string>
    <string name="detail_accPet_textview">Accumulative Evapotranspiration</string>
    <string name="detail_ppet_textview">Precipitation/ Potential Evapotranspiration</string>
    <string name="detail_etc_textview">ETC</string>
    <string name="detail_kc_textview">KC</string>
    <string name="title_activity_data_summary">DataSummary</string>

</resources>