<!-- Master layout. -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <!-- Header: Day, Date -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:orientation="vertical">
            </LinearLayout>

            <ImageView
                android:id="@+id/detail_icon"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:src="@drawable/art_clear"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical">

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/detail_day_textview"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceLarge"/>

        <TextView
            android:id="@+id/detail_date_textview"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceSmall"/>

        <TextView
            android:id="@+id/detail_forecast_textview"
            android:layout_width="fill_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceMedium"/>

        <View
            android:layout_width="fill_parent"
            android:layout_height="10dp"
            android:background="@color/gray"/>

        <TextView
            android:id="@+id/detail_high_textview_title"
            android:text="@string/detail_high_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:id="@+id/detail_high_textview"
            android:text="n/a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/detail_low_textview_title"
            android:text="@string/detail_low_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:id="@+id/detail_low_textview"
            android:text="n/a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/detail_max_humidity_title"
            android:text="@string/detail_max_humidity_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:id="@+id/detail_max_humidity_textview"
            android:text="n/a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/detail_min_humidity_title"
            android:text="@string/detail_min_humidity_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:id="@+id/detail_min_humidity_textview"
            android:text="n/a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/detail_max_wind_title"
            android:text="@string/detail_max_wind_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:id="@+id/detail_max_wind_textview"
            android:text="n/a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/detail_morn_wind_title"
            android:text="@string/detail_morn_wind_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:id="@+id/detail_morn_wind_textview"
            android:text="n/a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/detail_precip_title"
            android:text="@string/detail_precip_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:id="@+id/detail_precip_textview"
            android:text="n/a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/detail_accPrecip_title"
            android:text="@string/detail_accPrecip_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:id="@+id/detail_accPrecip_textview"
            android:text="n/a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/detail_accPrecipPriorYear_title"
            android:text="@string/detail_accPrecipPriorYear_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:id="@+id/detail_accPrecipPriorYear_textview"
            android:text="n/a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/detail_accPrecip3YearAverage_title"
            android:text="@string/detail_accPrecip3YearAverage_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:id="@+id/detail_accPrecip3YearAverage_textview"
            android:text="n/a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/detail_accPrecipLongTermAverage_title"
            android:text="@string/detail_accPrecipLongTermAverage_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:id="@+id/detail_accPrecipLongTermAverage_textview"
            android:text="n/a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/detail_solar_title"
            android:text="@string/detail_solar_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:id="@+id/detail_solar_textview"
            android:text="n/a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/detail_gdd_title"
            android:text="@string/detail_gdd_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:id="@+id/detail_gdd_textview"
            android:text="n/a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/detail_accGdd_title"
            android:text="@string/detail_accGdd_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:id="@+id/detail_accGdd_textview"
            android:text="n/a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/detail_accGddPriorYear_title"
            android:text="@string/detail_accGddPriorYear_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:id="@+id/detail_accGddPriorYear_textview"
            android:text="n/a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/detail_accGdd3YearAverage_title"
            android:text="@string/detail_accGdd3YearAverage_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:id="@+id/detail_accGdd3YearAverage_textview"
            android:text="n/a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/detail_accGddLongTermAverage_title"
            android:text="@string/detail_accGddLongTermAverage_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:id="@+id/detail_accGddLongTermAverage_textview"
            android:text="n/a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/detail_pet_title"
            android:text="@string/detail_pet_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:id="@+id/detail_pet_textview"
            android:text="n/a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/detail_accPet_title"
            android:text="@string/detail_accPet_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:id="@+id/detail_accPet_textview"
            android:text="n/a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/detail_ppet_title"
            android:text="@string/detail_ppet_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed"
            android:textAppearance="?android:textAppearanceMedium"/>

        <TextView
            android:id="@+id/detail_ppet_textview"
            android:text="n/a"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </LinearLayout>
</ScrollView>