<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.gohar.hydra.UserInputActivity">

    <TextView
        android:id="@+id/user_input_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/user_inputs"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#A4C639" />

    <TextView
        android:id="@+id/user_input_planting_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/user_input_heading"
        android:layout_marginTop="23dp"
        android:text="@string/user_input_planting_date"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="#0099FF" />

    <EditText
        android:id="@+id/edit_user_input_planting_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/user_input_planting_date"
        android:layout_toRightOf="@+id/user_input_planting_date"
        android:background="#CCCCCC"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <Button
        android:id="@+id/button_submit_user_input"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/user_input_planting_date"
        android:layout_marginTop="20dp"
        android:background="#0099FF"
        android:text="@string/user_input_button_submit"
        android:textColor="#FFFFFF" />

</RelativeLayout>
